fix: task section container horizontal overflow

--- a/frontend/public/styles/main.css
+++ b/frontend/public/styles/main.css
@@ -62,7 +62,7 @@ aside ul li:hover {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    /* overflow-y: scroll; */
+    overflow-x: auto;
 }
 
 .top-bar {
